@@ -15,7 +15,7 @@ abstract class FileRepo {
 	var $thumbScriptUrl, $transformVia404;
 	var $descBaseUrl, $scriptDirUrl, $articleUrl, $fetchDescription, $initialCapital;
 	var $pathDisclosureProtection = 'paranoid';
-	var $descriptionCacheExpiry, $apiThumbCacheExpiry, $hashLevels;
+	var $descriptionCacheExpiry, $apiThumbCacheExpiry, $hashLevels, $fileNamespace;
 
 	/**
 	 * Factory functions for creating new files
@@ -30,9 +30,10 @@ abstract class FileRepo {
 
 		// Optional settings
 		$this->initialCapital = true; // by default
+		$this->fileNamespace  = MWNamespace::getCanonicalName( NS_FILE ); // fallback to 'File'
 		foreach ( array( 'descBaseUrl', 'scriptDirUrl', 'articleUrl', 'fetchDescription',
 			'thumbScriptUrl', 'initialCapital', 'pathDisclosureProtection', 
-			'descriptionCacheExpiry', 'apiThumbCacheExpiry', 'hashLevels' ) as $var )
+			'descriptionCacheExpiry', 'apiThumbCacheExpiry', 'hashLevels', 'fileNamespace' ) as $var )
 		{
 			if ( isset( $info[$var] ) ) {
 				$this->$var = $info[$var];
@@ -262,10 +263,10 @@ abstract class FileRepo {
 		if ( is_null( $this->descBaseUrl ) ) {
 			if ( !is_null( $this->articleUrl ) ) {
 				$this->descBaseUrl = str_replace( '$1',
-					wfUrlencode( MWNamespace::getCanonicalName( NS_FILE ) ) . ':', $this->articleUrl );
+					wfUrlencode( $this->getFileNamespace() ) . ':', $this->articleUrl );
 			} elseif ( !is_null( $this->scriptDirUrl ) ) {
 				$this->descBaseUrl = $this->scriptDirUrl . '/index.php?title=' .
-					wfUrlencode( MWNamespace::getCanonicalName( NS_FILE ) ) . ':';
+					wfUrlencode( $this->getFileNamespace() ) . ':';
 			} else {
 				$this->descBaseUrl = false;
 			}
@@ -300,7 +301,7 @@ abstract class FileRepo {
 	function getDescriptionRenderUrl( $name ) {
 		if ( isset( $this->scriptDirUrl ) ) {
 			return $this->scriptDirUrl . '/index.php?title=' .
-				wfUrlencode( MWNamespace::getCanonicalName( NS_FILE ) . ':' . $name ) .
+				wfUrlencode( $this->getFileNamespace() . ':' . $name ) .
 				'&action=render';
 		} else {
 			$descBase = $this->getDescBaseUrl();
@@ -533,5 +534,12 @@ abstract class FileRepo {
 	
 	function findBySha1( $hash ) {
 		return array();
+	}
+	/**
+	 * Returns the file namespace string
+	 * @return strig
+	 */
+	function getFileNamespace() {
+		return $this->fileNamespace;
 	}
 }
